syntax = "proto3";

package user;

message User {
  string id = 1;
  string userName = 2;
  string email = 3;
  string address = 4;
  string phoneNumber = 5;
  string avatar = 6;
  bool isVerified = 7;
  string role = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message Id {
  string id = 1;
}
message Email {
  string email = 1;
}
message StatusResponse {
  bool status = 1;
  string message = 2;
}
message PasswordRequest {
  string id = 1;
  string password = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string userName = 2;
  optional string passwordHash = 3;
  optional string address = 4;
  optional string phoneNumber = 5;
  optional string avatar = 6;
  optional bool isVerified = 7;
  optional string role = 8;
}

service UserService {
  rpc GetUserByEmail(Email) returns (User) {}
  rpc GetUserById(Id) returns (User) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
  rpc DeleteUser(Id) returns (StatusResponse) {}
  rpc ConfirmPassword(PasswordRequest) returns (StatusResponse) {}
  rpc ChangePassword(PasswordRequest) returns (StatusResponse) {}
}

// protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/user.proto